--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="signup">Sign Up</string>
     <string name="skip">Skip?</string>
     <string name="notification">Notification</string>
-    <string name="BookAppointment">Book Appointment</string>
+    <string name="BookAppointment">Book Salon Appointment</string>
     <string name="ourservices">Our Services</string>
     <string name="offers">Offers</string>
     <string name="Homecareproducts">Home Care Tips</string>
@@ -24,4 +24,11 @@
     <string name="Community">Community</string>
     <string name="About">About</string>
     <string name="logout">Log Out</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_version">Version 1.0.1</string>
+    <string name="developed_by">Developed By</string>
+    <string name="email">sindhura@gmail.com</string>
+    <string name="contact">Contact</string>
+    <string name="contactno">xxx-xxx-xxxx</string>
 </resources>
